# test_task_grigoryev

./: README.md  Workers.xlsx  pyproject.toml  requirements.txt
config/: settings.py  urls.py
workers/: models.py  serializers.py  views.py
workers/management/commands/: load_data.py
workers/migrations/: 0001_initial.py
